feature(People) Added person and people msgs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(tue_msgs)
 
 find_package(catkin REQUIRED COMPONENTS
   message_generation
+  std_msgs
+  geometry_msgs
 )
 
 add_message_files(
@@ -10,17 +12,21 @@ add_message_files(
   FILES
     GripperCommand.msg
     GripperMeasurement.msg
+    People.msg
+    Person.msg
 )
 
 generate_messages(
   DEPENDENCIES
+  std_msgs
+  geometry_msgs
 )
 
 catkin_package(
   # INCLUDE_DIRS include
   # LIBRARIES bla
   CATKIN_DEPENDS
-    message_runtime
+    message_runtime geometry_msgs std_msgs
 )
 
 include_directories(
