added LocateDoorHandle action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(tue_msgs)
 find_package(catkin REQUIRED COMPONENTS
   message_generation
   std_msgs
+  actionlib_msgs
   geometry_msgs
 )
 
@@ -17,10 +18,17 @@ add_message_files(
     RGBLightCommand.msg
 )
 
+add_action_files(
+  DIRECTORY action
+  FILES
+    LocateDoorHandle.action
+)
+
 generate_messages(
   DEPENDENCIES
   std_msgs
   geometry_msgs
+  actionlib_msgs
 )
 
 catkin_package(
