--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
 
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>actionlib_msgs</depend>
 
   <build_depend>message_generation</build_depend>
 
